<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckboxActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutRadioButtonMenu"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/blueMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelRadioButtonMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/labelMenuTitle"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCheckboxMain"
        android:layout_width="409dp"
        android:layout_height="405dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutRadioButtonMenu">

        <TextView
            android:id="@+id/labelCheckboxTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="3dp"
            android:text="@string/labelCheckboxTitle"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxCheckBox1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxCheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="47dp"
            android:text="@string/checkBoxCheckBox1"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxCheckBox3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelCheckboxTitle" />

        <CheckBox
            android:id="@+id/checkBoxCheckBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/checkBoxCheckBox2"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxCheckBox3"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxCheckBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/checkBoxCheckBox3"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxCheckBox4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCheckBox1" />

        <CheckBox
            android:id="@+id/checkBoxCheckBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/checkBoxCheckBox4"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxCheckBox5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCheckBox3" />

        <CheckBox
            android:id="@+id/checkBoxCheckBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="47dp"
            android:text="@string/checkBoxCheckBox5"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/labelCheckBoxCheckBox5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCheckBox4" />

        <EditText
            android:id="@+id/labelCheckBoxCheckBox5"
            android:layout_width="368dp"
            android:layout_height="0dp"
            android:layout_marginBottom="18dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/labelCheckBoxCheckBox5"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCheckBox5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCheckboxSend"
        android:layout_width="219dp"
        android:layout_height="65dp"
        android:layout_marginTop="46dp"
        android:text="@string/buttonCheckboxSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCheckboxMain"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>