<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutRadioButtonMenu"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/blueMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelRadioButtonMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/labelMenuTitle"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutMainMain"
        android:layout_width="410dp"
        android:layout_height="230dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutRadioButtonMenu">

        <TextView
            android:id="@+id/labelMainPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:labelFor="@id/editTextMainPassword"
            android:text="@string/labelMainPassword"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextMainPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.242"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextMainPassword"
            android:layout_width="254dp"
            android:layout_height="51dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/labelMainPassword"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxMainShowPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxMainShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="38dp"
            android:text="@string/checkBoxMainShowPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextMainPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextMainPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMainSend"
        android:layout_width="170dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:text="@string/buttonMainSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayoutMainMain"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>